--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav ul li a {
 }
 
 .hero-section {
-    background-image: url('https://www.pexels.com/photo/green-grass-388415/');/* Replace with your image file name */
+    background-image: url('https://images.pexels.com/photos/691668/pexels-photo-691668.jpeg');/* Replace with your image file name */
     background-size: cover;
     background-position: center;
     height: 300px;
